# ir-remote

./: .dockerignore  .editorconfig  .gitignore  .tool-versions  Dockerfile  README.md  taskfile.yaml
backend/: Cargo.toml  client.rest  go.mod  go.sum  taskfile.yaml
backend/cmd/server/: server.go
backend/internal/bot/: bot.go  commands.go  commands_test.go
backend/internal/commands/: command.go  nec_chained.go  nec_chained_test.go  payloads.go
backend/internal/irremote/: messages.go  session.go  session_test.go
backend/internal/irremote/encoder/: aes.go  aes_test.go  dummy.go  dummy_test.go  encoder.go
backend/internal/irremote/transport/: transport.go  udp.go  udp_test.go
backend/internal/webserver/: webserver.go
backend/src/: main.rs
esp32firmware/: Cargo.toml
esp32firmware/.cargo/: config.toml
esp32firmware/src/: main.rs
firmware/: Dockerfile  taskfile.yaml
firmware/controller/: application.h  controller.ino  crypto.h  logger.h  network.h  test_payloads.h
firmware/lib/: debug.h  result.h
firmware/tester/: lessar_command.h  tester.ino  tests.cpp
frontend/: .eslintrc.yaml  .gitignore  package-lock.json  package.json  taskfile.yaml
frontend/components/: StatusBage.js
frontend/lib/: api.js  commands.js
frontend/pages/: index.js
infra/: docker-compose.yaml  taskfile.yaml
tgbot/: Cargo.toml  config.yaml  taskfile.yaml
tgbot/src/: bot.rs  config.rs  main.rs  server.rs
tgbot/src/server/: handle.rs  runner.rs  transport.rs
