[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dotenv = "0.15.0"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["raw_value"] }

[[bin]]
name = "backend"
path = "src/main.rs"


