[package]
name = "tgbot"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.12", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
tokio-util = { version = "0.7.8", features = ["codec", "net"] }
chrono = "0.4.26"
fallible-iterator = "0.3.0"
chrono-tz = "0.8.3"
futures = "0.3.28"
serde_yaml = "0.9.25"
serde = { version = "1.0.178", features = ["derive"] }
rand = "0.8.5"
tinytemplate = "1.2.1"
bytes = "1.4.0"
async-stream = "0.3.5"
futures-util = "0.3.28"
thiserror = "1.0.47"
serde_json = "1.0.105"
